Servicos/exercicio/service-primeiro-app-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-primeiro-app-v2
  namespace: exercicio2
spec:
  selector:
    app: primeiro-app-nodejs-v2
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
