Servicos/exercicio/service-primeiro-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-primeiro-app
  namespace: exercicio2
spec:
  selector:
    app: primeiro-app-nodejs
    linguagem: nodejs
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8080
      nodePort: 30002
