Servicos/exercicio/ingress-primeiro-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-primeiro-app
  namespace: exercicio2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: primeiroapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-primeiro-app
                port:
                  number: 8000
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: svc-primeiro-app-v2
                port:
                  number: 8080
